--- a/TestIosCICD01.xcworkspace/xcshareddata/xcschemes/TestIosCICD01.xcscheme
+++ b/TestIosCICD01.xcworkspace/xcshareddata/xcschemes/TestIosCICD01.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A3282A5B2437E609EEB85861D7ECE717"
-               BuildableName = "AppCenter"
-               BlueprintName = "AppCenter"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "F31757F72B70E34C0028514D"
+               BuildableName = "TestIosCICD01.app"
+               BlueprintName = "TestIosCICD01"
+               ReferencedContainer = "container:TestIosCICD01.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -39,6 +39,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "F31757F72B70E34C0028514D"
+            BuildableName = "TestIosCICD01.app"
+            BlueprintName = "TestIosCICD01"
+            ReferencedContainer = "container:TestIosCICD01.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -46,15 +56,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A3282A5B2437E609EEB85861D7ECE717"
-            BuildableName = "AppCenter"
-            BlueprintName = "AppCenter"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "F31757F72B70E34C0028514D"
+            BuildableName = "TestIosCICD01.app"
+            BlueprintName = "TestIosCICD01"
+            ReferencedContainer = "container:TestIosCICD01.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
